--- a/config/config.json
+++ b/config/config.json
@@ -5,10 +5,19 @@
     "dialect": "postgres",
     "operatorsAliases": false
   },
-
   "production": {
-    "use_env_variable": "DATABASE_URL"
-  }
-
+    "use_env_variable": "DATABASE_URL",
+    "dialectOptions": {
+        "ssl": {
+          "require": true,
+          "rejectUnauthorized": false
+        }
+    }
+},
+    "scripts": {
+    "start": "node server.js"
+    }
 }
+
+
 
